--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -1,4 +1,4 @@
-FROM python:3.12-buster AS base
+FROM python:3.11-bookworm AS base
 ENV PATH=/srv/rp-celery/.local/bin/:/srv/rp-celery/bin:$PATH
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
