--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -8,7 +8,7 @@ RUN apt-get -yq update \
         && DEBIAN_FRONTEND=noninteractive apt-get install -y \
                 unattended-upgrades \
                 # rapidpro dependencies
-                libgdal20 \
+                libgdal-dev \
         && rm -rf /var/lib/apt/lists/* \
         && apt-get clean
 
