--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -27,14 +27,18 @@ RUN apt-get -yq update \
         && rm -rf /var/lib/apt/lists/* \
         && apt-get clean
 COPY --chown=rp-celery pyproject.toml poetry.lock ./
-USER rp-celery
-RUN pip install --no-cache-dir --user poetry
+ENV POETRY_VIRTUALENVS_CREATE=true
+ENV POETRY_VIRTUALENVS_IN_PROJECT=true
+ENV POETRY_VIRTUALENVS_ALWAYS_COPY=true
+RUN pip install poetry
 RUN poetry install --no-dev
 
 FROM base AS rp-celery
+ENV POETRY_VIRTUALENVS_IN_PROJECT=true
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-COPY --chown=rp-celery --from=pybuilder /srv/rp-celery/.local /srv/rp-celery/.local
+ENV PATH="/srv/rp-celery/rapidpro/.venv/bin:#{PATH}"
+COPY --chown=rp-celery --from=pybuilder /srv/rp-celery/rapidpro/.venv /srv/rp-celery/rapidpro/.venv
 COPY --chown=rp-celery . /srv/rp-celery/rapidpro/
 COPY --chown=rp-celery ./entrypoint.celery /srv/rp-celery/bin/entrypoint
 USER rp-celery
-ENTRYPOINT ["entrypoint"]
+ENTRYPOINT ["/srv/rp-celery/bin/entrypoint"]
