--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,12 @@ version = "8.0.1"
 description = "Hosted service for visually building interactive messaging applications"
 authors = ["Nyaruka <code@nyaruka.com>"]
 license = "AGPL-3"
+packages = [ { include = "temba" }]
 
-[tool.poetry.urls]
+[project]
+name= "RapidPro"
+
+[project.urls]
 repository = "http://github.com/rapidpro/rapidpro"
 
 [tool.poetry.dependencies]
@@ -57,7 +61,7 @@ openpyxl = "^3.0.9"
 ffmpeg-python = "^0.2.0"
 slack-sdk = "3.17.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.1.0"
 coverage = {extras = ["toml"], version = "^6.5.0"}
 isort = "^5.10.1"
