--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -23,11 +23,11 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
                 libssl-dev \
                 # psycopg2 deps
                 libpq-dev \
-                sed \
+                sed
 RUN rm -rf /var/lib/apt/lists/* && apt-get clean
 COPY --chown=rp-celery pyproject.toml poetry.lock ./
 RUN pip install --no-cache-dir poetry
-RUN poetry install --only main
+RUN poetry install --only main --no-root
 USER rp-celery
 
 FROM pybuilder AS rp-celery
