--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,71 +2,43 @@
 version: "3.9"
 
 services:
-  traefik:
-    image: "traefik:v2.4"
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.le.acme.httpchallenge=${ACME_ENABLE}"
-      - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.le.acme.email=${ACME_EMAIL}"
-      - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
+  caddy:
+    image: "caddy:2.9.1-alpine"
+    environment:
+      - PUBLIC_HOSTNAME=${HOSTNAME}
+    volumes:
+      - "../rapidpro-data/caddy/Caddyfile:/etc/caddy/Caddyfile"
+      - "../rapidpro-data/caddy/data:/data"
+      - "../rapidpro-data/rapidpro/sitestatic:/mnt/sitestatic:ro"
+    restart: always
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
-    restart: always
     networks:
       - rapidpro
-    volumes:
-      - "../rapidpro-data/letsencrypt:/letsencrypt"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   rapidpro:
     environment:
+      - RAPIDPRO_ENV=production
       - RAPIDPRO_STORAGE_URL=https://${HOSTNAME}/media
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.rapidpro.loadbalancer.server.port=8000"
-      - "traefik.http.routers.rapidpro-web.rule=Host(`${HOSTNAME}`) && PathPrefix(`/`)"
-      - "traefik.http.routers.rapidpro-web.entrypoints=web"
-      - "traefik.http.routers.rapidpro-web.middlewares=traefik-redirectscheme"
-
-      - "traefik.http.routers.rapidpro-websecure.rule=Host(`${HOSTNAME}`) && PathPrefix(`/`)"
-      - "traefik.http.routers.rapidpro-websecure.entrypoints=websecure"
-      - "traefik.http.routers.rapidpro-websecure.tls=true"
-      - "traefik.http.routers.rapidpro-websecure.tls.certresolver=le"
-      - "traefik.http.middlewares.traefik-redirectscheme.redirectscheme.scheme=https"
+    restart: always
 
   mailroom:
-    environment:
-      - MAILROOM_LOG_LEVEL=error
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.mailroom.loadbalancer.server.port=8090"
-      - "traefik.http.routers.mailroom-web.rule=Host(`${HOSTNAME}`) && PathPrefix(`/mr/`)"
-      - "traefik.http.routers.mailroom-web.entrypoints=web"
-      - "traefik.http.routers.mailroom-web.middlewares=traefik-redirectscheme"
-
-      - "traefik.http.routers.mailroom-websecure.rule=Host(`${HOSTNAME}`) && PathPrefix(`/mr/`)"
-      - "traefik.http.routers.mailroom-websecure.entrypoints=websecure"
-      - "traefik.http.routers.mailroom-websecure.tls=true"
-      - "traefik.http.routers.mailroom-websecure.tls.certresolver=le"
-      - "traefik.http.middlewares.traefik-redirectscheme.redirectscheme.scheme=https"
+    restart: always
 
   courier:
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.courier.loadbalancer.server.port=8080"
-      - "traefik.http.routers.courier-web.rule=Host(`${HOSTNAME}`) && PathPrefix(`/c/`)"
-      - "traefik.http.routers.courier-web.entrypoints=web"
-      - "traefik.http.routers.courier-web.middlewares=traefik-redirectscheme"
+    restart: always
 
-      - "traefik.http.routers.courier-websecure.rule=Host(`${HOSTNAME}`) && PathPrefix(`/c/`)"
-      - "traefik.http.routers.courier-websecure.entrypoints=websecure"
-      - "traefik.http.routers.courier-websecure.tls=true"
-      - "traefik.http.routers.courier-websecure.tls.certresolver=le"
-      - "traefik.http.middlewares.traefik-redirectscheme.redirectscheme.scheme=https"
+  rp-celery:
+    restart: always
+
+  rp-indexer:
+    restart: always
+
+  redis:
+    restart: always
+
+  elasticsearch:
+    restart: always
+
+
